--- a/1-index.html
+++ b/1-index.html
@@ -11,8 +11,8 @@
   <nav class="navbar">
     <ul>
       <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#exhibitions">Gallery/Exhibitions</a></li>
+      <li><a href="4-about.html">About</a></li>
+      <li><a href="6-gallery.html">Gallery/Exhibitions</a></li>
       <li><a href="#">Events</a></li>
       <li><a href="#">Artists</a></li>
     </ul>
