Create files for header. Generate header with js. Upadate Html with header place holder

--- a/4-about.html
+++ b/4-about.html
@@ -23,6 +23,8 @@
 
 <body>
   <!-- Navigation Bar -->
+  <div id="header-placeholder"></div>
+  
   <nav class="navbar expanded" id="mainNavbar">
     <ul>
       <li><a href="1-index.html">Home</a></li>
@@ -98,6 +100,6 @@
     }
   });
 </script>
-
+<script src="includes/header.js"></script>
 </body>
 </html>
