--- a/6-gallery.html
+++ b/6-gallery.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <!-- NAVBAR -->
+    <div id="header-placeholder"></div>
+
     <nav class="navbar">
         <div class="nav-container">
             <a href="1-index.html" class="logo">Art gallery</a>
@@ -23,7 +25,6 @@
             </div>
            <span class="menu-container"> <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
             <div class="hamburger" onclick="toggleMenu()">
-
             </span>
                
         
@@ -90,11 +91,11 @@
                     <div class="carousel-slide">
                         <img src="https://images.unsplash.com/photo-1578321272176-b7bbc0679853?w=400&h=250&fit=crop" alt="Exhibition 1" class="carousel-image">
                     </div>
-                    <div class="carousel-slide center">
+                    <div class="carousel-slide">
                         <img src="https://images.unsplash.com/photo-1578662996442-48f60103fc96?w=400&h=250&fit=crop" alt="Exhibition 2" class="carousel-image">
                     </div>
                     <div class="carousel-slide">
-                        <img src="https://images.unsplash.com/photo-1571115764595-644a1f56a55c?w=400&h=250&fit=crop" alt="Exhibition 3" class="carousel-image">
+                        <img src="./artworks/exhibit3.jpg" alt="Exhibition 3" class="carousel-image">
                     </div>
                     <div class="carousel-slide">
                         <img src="https://images.unsplash.com/photo-1578321272176-b7bbc0679853?w=400&h=250&fit=crop" alt="Exhibition 4" class="carousel-image">
@@ -161,5 +162,6 @@
     </footer>
 
     <script src="8-gallery.js"></script>
+    <script src="includes/header.js"></script>
 </body>
 </html>
