--- a/1-index.html
+++ b/1-index.html
@@ -5,18 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Art Gallery</title>
   <link rel="stylesheet" href="2-style.css">
+  <link rel="stylesheet" href="includes/header.css">
 </head>
 <body>
   <!-- Navigation Bar -->
-  <nav class="navbar">
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="4-about.html">About</a></li>
-      <li><a href="6-gallery.html">Gallery/Exhibitions</a></li>
-      <li><a href="#">Events</a></li>
-      <li><a href="#">Artists</a></li>
-    </ul>
-  </nav>
+  <div id="header-placeholder"></div>
+ 
 
   <!-- Hero Section -->
   <section class="hero">
@@ -64,5 +58,6 @@
   </footer>
 
   <script src="3-script.js"></script>
+  <script src="includes/header.js"></script>
 </body>
 </html>
