--- a/5-events/event-details.html
+++ b/5-events/event-details.html
@@ -41,6 +41,7 @@
                 linear-gradient(-45deg, transparent 49%, rgba(255, 255, 255, 0.03) 50%, transparent 51%);
             background-size: 60px 60px;
             animation: grid-shift 10s linear infinite;
+            
         }
 
         @keyframes grid-shift {
@@ -181,7 +182,7 @@
             gap: 3rem;
             margin-bottom: 5rem;
         }
-
+        /* Card background is down below */
         .info-card {
             background: rgba(255, 255, 255, 0.05);
             backdrop-filter: blur(10px);
