--- a/4-artists-page/index.html
+++ b/4-artists-page/index.html
@@ -14,20 +14,23 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background: #f8f9fa;
+            background: #0a0a0a;
             min-height: 100vh;
             overflow-x: hidden;
         }
 
         .hero-header {
             padding: 120px 5% 80px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: black;
             color: white;
             text-align: center;
+            border-bottom-right-radius: 50px;
+            border-bottom-left-radius: 50px;
         }
 
         .hero-title {
             font-size: 3.5rem;
+            color: #4ecdc4;
             font-weight: 700;
             margin-bottom: 1rem;
             opacity: 0;
@@ -89,7 +92,8 @@
         }
 
         .artist-card {
-            background: white;
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(10px);
             border-radius: 20px;
             overflow: hidden;
             box-shadow: 0 10px 30px rgba(0,0,0,0.1);
@@ -142,7 +146,7 @@
         .artist-name {
             font-size: 1.5rem;
             font-weight: 700;
-            color: #333;
+            color: white;
             margin-bottom: 8px;
         }
 
