--- a/6-exhibitions/exhibition.html
+++ b/6-exhibitions/exhibition.html
@@ -14,7 +14,7 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #0f0f0f 0%, #1a1a1a 100%);
+            background: #0a0a0a;
             color: #ffffff;
             overflow-x: hidden;
             line-height: 1.6;
@@ -37,7 +37,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(45deg, #ff6b6b, #4ecdc4, #45b7d1, #96ceb4);
+            background: #0a0a0a;
             background-size: 400% 400%;
             animation: gradientShift 20s ease infinite;
             opacity: 0.15;
